<resources>
    <string name="app_name">Instagram</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="view_all_comments">View all %1$d comments</string>
    <string name="title_activity_comments_">Comments Activity</string>
    <string name="title_activity_photo_grid">Photos Activity</string>

    <string name="login_info">Log in to see photos and videos from your friends</string>
    <string name="login_app_name">Instagram</string>
    <string name="login_sign_up">SIGN UP</string>
    <string name="login_log_in">LOG IN</string>
    <string name="login_user_name">User Name</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_or">OR</string>
    <string name="login_fb_login_desc">Log in with Facebook</string>
    <string name="login_fb_logo_desc">fb logo</string>
    <string name="login_password">Password</string>

    <string name="search">Search</string>

    <string name="profile_photos">photos</string>
</resources>
