<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context=".LoginActivity"
    android:theme="@style/AppTheme.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLoginTop"
        android:background="#906bde">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/login_app_name"
            android:id="@+id/tvLogo"
            android:layout_marginTop="60dp"
            android:textSize="35sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/login_info"
            android:id="@+id/tvInfo"
            android:layout_below="@+id/tvLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:maxWidth="300dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/login_sign_up"
            android:id="@+id/tvSignUp"
            android:layout_below="@+id/tvInfo"
            android:layout_toLeftOf="@+id/tvLogo"
            android:layout_toStartOf="@+id/tvLogo"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/login_log_in"
            android:id="@+id/tvLogin"
            android:layout_alignBaseline="@+id/tvSignUp"
            android:layout_alignBottom="@+id/tvSignUp"
            android:layout_toRightOf="@+id/tvLogo"
            android:layout_toEndOf="@+id/tvLogo"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/lLoginBottom"
        android:layout_below="@+id/lLoginTop">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUserName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/login_user_name"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etUserName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/etUserName"
            android:layout_alignEnd="@+id/etUserName"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot"
            android:id="@+id/tvForgotPwd"
            android:layout_alignRight="@+id/etPassword"
            android:layout_alignEnd="@+id/etPassword"
            android:layout_alignTop="@+id/etPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ivFBLogo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="200dp">

            <View
                android:layout_width="0dp"
                android:layout_weight="0.10"
                android:layout_height="1dp"
                android:background="#9c9999"
                android:id="@+id/v1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/login_or"
                android:id="@+id/tvOr"
                android:layout_weight="0"
                android:layout_marginTop="-5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="0.10"
                android:layout_height="1dp"
                android:background="#9c9999"
                android:id="@+id/v2"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivFBLogo"
            android:src="@drawable/fb"
            android:contentDescription="@string/login_fb_logo_desc"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/tvLoginFB"
            android:layout_toStartOf="@+id/tvLoginFB"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_fb_login_desc"
            android:id="@+id/tvLoginFB"
            android:layout_alignBottom="@+id/ivFBLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

</RelativeLayout>
